deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-titanic
  labels:
    app: titanic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: titanic
  template:
    metadata:
      labels:
        app: titanic
    spec:
      containers:
      - name: api-titanic
        image: jackobenco/application:v0.0.5
        ports:
        - containerPort: 8000
